--- a/web/Search.html
+++ b/web/Search.html
@@ -16,6 +16,10 @@
     <!-- Link favicon, so google can show in search results -->
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
+    <!-- Provide more sutable information show in google search -->
+    <title>Cultural and Literary Animal Studies: book search</title>
+    <meta name="description" lang="en" content="The CLAS Digital searchable book archive contains over 100,000 pages from historical books related the study of animals."/>
+
     <script src="Search.js"></script>
     <script src="user.js"></script>
 </head>
