--- a/web/Search.html
+++ b/web/Search.html
@@ -27,7 +27,7 @@
 
 
 <body style='width: 100%; height: 100%;'>
-    <div id='tpnav' class="topnav">
+    <nav id='tpnav' class="topnav">
         <a id='homelink' href='/information/'>Information</a>
         <a id='searchlink' class="active" href='/search'>Search</a>
 	<a id='statisticslink' href='/statistics/'>Statistics</a>
@@ -46,7 +46,7 @@
             </form>
         </div>
 
-    </div>
+    </nav>
 
 
     <div id="searchboxid" class="button_box_top">
