--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -48,7 +48,7 @@ window.addEventListener("load",function(){initialise("homelink");},false);
 </script>
   </head>
 <body>
-    <div id='tpnav' class="topnav">
+    <nav id='tpnav' class="topnav">
         <a id='homelink' class="active" href='/information/'>Information</a>
         <a id='searchlink' href='/search'>Search</a>
 	<a id='statisticslink' href='/statistics/'>Statistics</a>
@@ -65,7 +65,7 @@ window.addEventListener("load",function(){initialise("homelink");},false);
                 <input type="submit" value="Log In"/>
             </form>
         </div>
-    </div>
+    </nav>
 
  <div class="GeneralPageLayout">
      <p>
