--- a/web/private/admin/Administration.html
+++ b/web/private/admin/Administration.html
@@ -31,7 +31,7 @@ body {
   </head>
 <body>
 <!-- The navigation bar config -->
-<div id='tpnav' class="topnav">
+<nav id='tpnav' class="topnav">
     <a id='homelink' href='/information/'>Information</a>
     <a id='searchlink' href='/search'>Search</a>
     <a id='statisticslink' href='/statistics/'>Statistics</a>
@@ -48,7 +48,7 @@ body {
             <input type="submit" value="Log In"/>
         </form>'
     </div>
-</div>
+</nav>
 
 
 <div id="StateBanner"></div>
