--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <!-- The navigation bar config -->
-    <div id='tpnav' class="topnav">
+    <nav id='tpnav' class="topnav">
 	<a id='homelink' href='/information/'>Information</a>
 	<a id='searchlink' href='/search'>Search</a>
 	<a id='statisticslink' href='/statistics/'>Statistics</a>
@@ -37,7 +37,7 @@
 	    </form>
 	</div>
 
-    </div>
+    </nav>
 
     <div class='biggerPageClass'>
 	<h3 id='status_banner'></h3>
