--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -693,7 +693,7 @@ h1 {
   </head>
 <body>
 <!-- The navigation bar config -->
-<div id='tpnav' class="topnav">
+<nav id='tpnav' class="topnav">
     <a id='homelink' href='/information/'>Information</a>
     <a id='searchlink' href='/search'>Search</a>
     <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
@@ -710,7 +710,7 @@ h1 {
             <input type="submit" value="Log In"/>
         </form>'
     </div>
-</div>
+</nav>
 
 
 <div id="BookInfoPage" class="GeneralPageLayout">
