Updated front page

--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -31,6 +31,7 @@ html {
 }
 
 .GeneralPageLayout {
+    margin-top: 4rem;
     width: 100%;
 }
 
@@ -38,7 +39,12 @@ html {
     width: 40%;
     margin-left: 7%;
     margin-right: 50%;
-    margin-top: 5rem;
+    margin-top: 2rem;
+}
+
+.GeneralPageLayout p abbr {
+    cursor: auto;
+    text-decoration: auto;
 }
 
 </style>
