Started the basics for the catalogue

--- a/web/Search.html
+++ b/web/Search.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/search” />
     <!--<link rel="stylesheet" href="style.css">-->
-    <title>Search - clas digital</title>
 
     <link href="topnav.css" rel="stylesheet" type="text/css">
     <link href="Search.css" rel="stylesheet">
@@ -30,7 +29,7 @@
     <nav id='tpnav' class="topnav">
         <a id='homelink' href='/information/'>Information</a>
         <a id='searchlink' class="active" href='/search'>Search</a>
-	<a id='statisticslink' href='/statistics/'>Statistics</a>
+	<a id='statisticslink' href='/catalogue/'>Statistics</a>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
         <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
 
