--- a/web/Search.html
+++ b/web/Search.html
@@ -29,7 +29,13 @@
     <nav id='tpnav' class="topnav">
         <a id='homelink' href='/information/'>Information</a>
         <a id='searchlink' class="active" href='/search'>Search</a>
-	<a id='statisticslink' href='/catalogue/'>Statistics</a>
+	<div class='dropdown'>
+		<a id='statisticslink' href='/catalogue/'>Catalogue</a>
+		<div class='dropdown-content'>
+			<a>Link</a>
+			<a>Link2</a>
+		</div>
+	</div>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
         <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
 
