Added the basic layout of the dropdown menu

--- a/web/Search.html
+++ b/web/Search.html
@@ -30,10 +30,12 @@
         <a id='homelink' href='/information/'>Information</a>
         <a id='searchlink' class="active" href='/search'>Search</a>
 	<div class='dropdown'>
-		<a id='statisticslink' href='/catalogue/'>Catalogue</a>
+		<a id='statisticslink' class='dropdown-banner' href='/catalogue'>Catalogue  </a>
 		<div class='dropdown-content'>
-			<a>Link</a>
-			<a>Link2</a>
+			<a href="/catalogue/books">Books</a>
+			<a href="/catalogue/authors">Authors</a>
+			<a href="/catalogue/collections">Collections</a>
+			<a href="/catalogue/years">Years</a>
 		</div>
 	</div>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
