Use HTML double quotes instead of smart quotes in HTML Resolves #179

--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -10,7 +10,7 @@
     <link href="/topnav.css" rel="stylesheet" type="text/css">
     <link href="UploadBook.css" rel="stylesheet">
 
-	<link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/private/write/UploadBook.html” />
+	<link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/private/write/UploadBook.html" />
 
     <script src="/user.js"></script>
     <script src="UploadBook.js"></script>
