--- a/web/statistics/index.html
+++ b/web/statistics/index.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/information/” />
+    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/information/statistics" />
 
     <script src='../user.js'></script>
 <style>
