--- a/web/information/help/index.html
+++ b/web/information/help/index.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8" />
     <title>Using the clas-digital book search</title>
-    
+    <meta name="description" content="How to use and search the CLAS digital collection of over 100,000 pages related animal studies." />
+    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/information/help" />
+    <link rel="up" href="https://www.clas-digital.uni-frankfurt.de/information" />
+    <link rel="top" href="https://www.clas-digital.uni-frankfurt.de/" />
+
+    <link rel="shortcut icon" href="/static/fav/hand-top-right-16+32+48.ico" />
 </head>
 
 <body>
