--- a/web/Search.html
+++ b/web/Search.html
@@ -30,7 +30,7 @@
     <nav id='tpnav' class="topnav">
         <a id='homelink' href='/information/'>Information</a>
         <a id='searchlink' class='active' href='/search'>Search</a>
-	<!--<div class='dropdown'>
+	<div class='dropdown'>
 		<a id='statisticslink' class='dropdown-banner' href='/catalogue'>Catalogue  </a>
 		<div class='dropdown-content'>
 			<a href="/catalogue/books">Books</a>
@@ -38,7 +38,7 @@
 			<a href="/catalogue/collections">Collections</a>
 			<a href="/catalogue/years">Years</a>
 		</div>
-	</div>-->
+	</div>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
         <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
 
