--- a/web/catalogue/template.html
+++ b/web/catalogue/template.html
@@ -52,9 +52,9 @@
     </nav>
 
 	<ul>
-	## for subpages in pages
-	<a href="/catalogue/{{ subpages }}/">{{ subpages }}</a>
-	## endfor
+	{% for pg in pages %}
+	<a href="/catalogue/{{ pg }}/">{{ pg }}</a>
+	{% endfor %}
 	</ul>
 </body>
 
