Started to create cataloge/authors

--- a/web/catalogue/template.html
+++ b/web/catalogue/template.html
@@ -53,7 +53,7 @@
 
 	<ul>
 	## for subpages in pages
-	<a href="/catalogue/{{ subpages }}/">{{ subpages }}</a>
+	<li><a href="/catalogue/{{ subpages }}/">{{ subpages }}</a></li>
 	## endfor
 	</ul>
 </body>
