--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -20,16 +20,22 @@
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
+    <link href="/catalogue/catalogue.css" rel="stylesheet" type="text/css">
+    <script src="/catalogue/catalogue.js"></script>
 </head>
 
 <body>
 	{% include "../template_navbar.html" %}	
-	<h1>Catalogue collection</h1>
-    <ul>
+	<center><h1>Catalogue collection</h1></center>
+	<center><p>{{ length(pillars) }} diffrent collections</p></center>
+	<center><input placeholder="Search for categories..." oninput="on_search(this);"></input></center>
+	<center><p id='filteropts' style='display:none;color: grey;'></p></center>
+	<hr>
+    <ol>
     {% for pillar in pillars %}
-    <li><a href="/catalogue/collections/{{ pillar.key }}/">{{ pillar.name}}<a></li>
+    <li><a class="searchable_item" href="/catalogue/collections/{{ pillar.key }}/">{{ pillar.name}}<a></li>
     {% endfor %}
-    </ul>
+    </ol>
 </body>
 
 
