--- a/web/catalogue/collections/template_collection.html
+++ b/web/catalogue/collections/template_collection.html
@@ -20,14 +20,20 @@
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
+    <link href="/catalogue/catalogue.css" rel="stylesheet" type="text/css">
+    <script src="/catalogue/catalogue.js"></script>
 </head>
 
 <body>
 	{% include "../template_navbar.html" %}	
-	<h1>Catalogue collection: {{pillar.name}}</h1>
-    <ul>
+	<center><h1>Catalogue collection: {{pillar.name}}</h1></center>
+	<center><p>{{ length(books) }} books in this collection</p></center>
+	<center><input placeholder="Search for categories..." oninput="on_search(this);"></input></center>
+	<center><p id='filteropts' style='display:none;color: grey;'></p></center>
+	<hr/>
+    <ol>
     {% for book in books %}
-    <li><a href="/books/{{ book.id}}/">{{ book.show }}<a></li>
+    <li><a class="searchable_item" href="/books/{{ book.id}}/">{{ book.show }}<a></li>
     {% endfor %}
-    </ul>
+    </ol>
 </body>
