--- a/web/catalogue/years/template.html
+++ b/web/catalogue/years/template.html
@@ -20,20 +20,22 @@
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
+    <link href="/catalogue/catalogue.css" rel="stylesheet" type="text/css">
+    <script src="/catalogue/catalogue.js"></script>
 </head>
 
 <body>
 	{% include "../template_navbar.html" %}	
-	<h1>Catalogue year</h1>
-	<ul>
+	<center><h1>Catalogue year</h1></center>
+	<center><p>Found books from {{ length(years) }} distinct years</p></center>
+	<center><input placeholder="Search for categories..." oninput="on_search(this);"></input></center>
+	<center><p id='filteropts' style='display:none;color: grey;'></p></center>
+	<hr/>
+	<ol>
 		{% for year in years %}
-		{% if year.year < 0 %}
-		<li><a href="/catalogue/years/unkown">Year unknown ({{ year.count }} books)</a></li>
-		{% else %}
-		<li><a href="/catalogue/years/{{ year.year }}">{{ year.year }} ({{ year.count }} books)</a></li>
-		{% endif %}
+		<li><a class="searchable_item" href="/catalogue/years/{{ year.year }}">{{ year.year }} (books: {{ year.count }})</a></li>
 		{% endfor %}
-	</ul>
+	</ol>
 </body>
 
 
