--- a/web/Search.html
+++ b/web/Search.html
@@ -31,12 +31,12 @@
         <a id='homelink' href='/information/'>Information</a>
         <a id='searchlink' class='active' href='/search'>Search</a>
 	<div class='dropdown'>
-		<a id='statisticslink' class='dropdown-banner' href='/catalogue'>Catalogue  </a>
+		<a id='statisticslink' class='dropdown-banner' href='/catalog'>Catalog  </a>
 		<div class='dropdown-content'>
-			<a href="/catalogue/books">Books</a>
-			<a href="/catalogue/authors">Authors</a>
-			<a href="/catalogue/collections">Collections</a>
-			<a href="/catalogue/years">Years</a>
+			<a href="/catalog/books">Books</a>
+			<a href="/catalog/authors">Authors</a>
+			<a href="/catalog/collections">Collections</a>
+			<a href="/catalog/years">Years</a>
 		</div>
 	</div>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
