restore Catalogue back to catalogue to match rel=canonical Hopefully fixes 194

--- a/web/catalogue/template_navbar.html
+++ b/web/catalogue/template_navbar.html
@@ -2,12 +2,12 @@
 	<a id='homelink' href='/information/'>Information</a>
 	<a id='searchlink' href='/search'>Search</a>
 	<div class='dropdown'>
-		<a id='statisticslink' class='dropdown-banner active' href='/catalog'>Catalog</a>
+		<a id='statisticslink' class='dropdown-banner active' href='/catalogue'>Catalogue</a>
 		<div class='dropdown-content'>
-			<a href="/catalog/books">Books</a>
-			<a href="/catalog/authors">Authors</a>
-			<a href="/catalog/collections">Collections</a>
-			<a href="/catalog/years">Years</a>
+			<a href="/catalogue/books">Books</a>
+			<a href="/catalogue/authors">Authors</a>
+			<a href="/catalogue/collections">Collections</a>
+			<a href="/catalogue/years">Years</a>
 		</div>
 	</div>
 	<a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
