--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -72,12 +72,12 @@ window.addEventListener("load",function(){initialise("homelink");},false);
         <a id='homelink' class="active" href='/information/'>Information</a>
         <a id='searchlink' href='/search'>Search</a>
 	<div class='dropdown'>
-		<a id='statisticslink' class='dropdown-banner' href='/catalog'>Catalog  </a>
+		<a id='statisticslink' class='dropdown-banner' href='/catalogue'>Catalogue</a>
 		<div class='dropdown-content'>
-			<a href="/catalog/books">Books</a>
-			<a href="/catalog/authors">Authors</a>
-			<a href="/catalog/collections">Collections</a>
-			<a href="/catalog/years">Years</a>
+			<a href="/catalogue/books">Books</a>
+			<a href="/catalogue/authors">Authors</a>
+			<a href="/catalogue/collections">Collections</a>
+			<a href="/catalogue/years">Years</a>
 		</div>
 	</div>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
