--- a/web/catalogue/books/template.html
+++ b/web/catalogue/books/template.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/catalogue/years" />
+    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/catalogue/books" />
     <!--<link rel="stylesheet" href="style.css">-->
 
     <link href="/topnav.css" rel="stylesheet" type="text/css">
@@ -17,25 +17,31 @@
     <!-- Provide more sutable information show in google search -->
     <title>Cultural and Literary Animal Studies: catalogue</title>
     <meta name="description" lang="en" content="The CLAS Digital searchable book archive catalogue"/>
+    <link href="/catalogue/catalogue.css" rel="stylesheet" type="text/css">
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
-    <link href="/catalog/catalogue.css" rel="stylesheet" type="text/css">
-    <script src="/catalog/catalogue.js"></script>
+    <script src="/catalogue/catalogue.js"></script>
 </head>
 
 <body>
 	{% include "../template_navbar.html" %}	
-	<center><h1>Catalogue years</h1></center>
-	<center><p>Found books from {{ length(years) }} distinct years</p></center>
-	<center><input placeholder="Search for categories..." oninput="on_search(this);"></input></center>
+	<center><h1>Index of all books</h1></center>
+	<center><p>{{ length(books) }} books</p></center>
+	<center><input placeholder="Search for categories..." oninput="on_search(this,2);"></input></center>
 	<center><p id='filteropts' style='display:none;color: grey;'></p></center>
-	<hr/>
-	<ul>
-		{% for year in years %}
-		<li><a class="searchable_item" href="/catalogue/years/{{ year.year }}">{{ year.year }} (books: {{ year.count }})</a></li>
-		{% endfor %}
-	</ul>
+	<hr>
+	
+	<ol>
+	{% for pg in books %}
+	<li> 
+		<a class="searchable_item" href="/books/{{ pg.key }}/">{{ pg.title }}</a>
+		<a class="searchable_item" style="display: none">{{ lower(pg.bib) }}</a>
+	</li>
+	{% endfor %}
+	</ol>
+
 </body>
+
 
 
