--- a/web/catalogue/years/template_year.html
+++ b/web/catalogue/years/template_year.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/catalogue/collections" />
+    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/catalogue/years" />
     <!--<link rel="stylesheet" href="style.css">-->
 
     <link href="/topnav.css" rel="stylesheet" type="text/css">
@@ -20,20 +20,26 @@
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
-    <link href="/catalog/catalogue.css" rel="stylesheet" type="text/css">
-    <script src="/catalog/catalogue.js"></script>
+    <link href="/catalogue/catalogue.css" rel="stylesheet" type="text/css">
+    <script src="/catalogue/catalogue.js"></script>
 </head>
 
 <body>
 	{% include "../template_navbar.html" %}	
-	<center><h1>Catalogue collection: {{pillar.name}}</h1></center>
-	<center><p>{{ length(books) }} books in this collection</p></center>
-	<center><input placeholder="Search for categories..." oninput="on_search(this);"></input></center>
+	<center><h1>Catalogue year {{ year }}</h1></center>
+	<center><p>Found {{ length(books) }} books from the year {{ year }}</p></center>
+	<center><input placeholder="Search for books..." oninput="on_search(this,2);"></input></center>
 	<center><p id='filteropts' style='display:none;color: grey;'></p></center>
 	<hr/>
-    <ol>
-    {% for book in books %}
-    <li><a class="searchable_item" href="/books/{{ book.id}}/">{{ book.show }}<a></li>
-    {% endfor %}
-    </ol>
+	<ol>
+		{% for book in books %}
+		<li>
+			<a class="searchable_item" href="/books/{{ book.key }}/">{{ book.title }}</a>
+			<a class="searchable_item" style="display: none">{{ lower(book.bib) }}</a>
+
+		</li>
+		{% endfor %}
+	</ol>
 </body>
+
+
