--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -26,14 +26,15 @@
 
 <body>
 	{% include "../template_navbar.html" %}	
-	<center><h1>Catalogue collection</h1></center>
-	<center><p>{{ length(pillars) }} diffrent collections</p></center>
-	<center><input placeholder="Search for categories..." oninput="on_search(this);"></input></center>
-	<center><p id='filteropts' style='display:none;color: grey;'></p></center>
-	<hr>
+	<header>
+	<h1>Catalogue collection</h1>
+	<p>{{ length(pillars) }} diffrent collections</p>
+	{% include "../search_template.html" %}
+	</header>
+	
     <ol>
     {% for pillar in pillars %}
-    <li><a class="searchable_item" href="/catalogue/collections/{{ pillar.key }}/">{{ pillar.name}}<a></li>
+    <li class="searchable_item"><a href="/catalogue/collections/{{ pillar.key }}/">{{ pillar.name}}<a></li>
     {% endfor %}
     </ol>
 </body>
