working on issue #207, issue #203 and issue #204

--- a/web/catalogue/years/template.html
+++ b/web/catalogue/years/template.html
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
     <!-- Provide more sutable information show in google search -->
-    <title>Cultural and Literary Animal Studies: catalogue</title>
-    <meta name="description" lang="en" content="The CLAS Digital searchable book archive catalogue"/>
+    <title>Years - Cultural and Literary Animal Studies</title>
+    <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all books by year."/>
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
@@ -27,7 +27,7 @@
 <body>
 	{% include "../template_navbar.html" %}	
 	<header>
-	<h1>Catalogue years</h1>
+	<h1>Catalogue: Years</h1>
 	<p>Found books from {{ length(years) }} distinct years</p>
 	{% include "../search_template.html" %}
 	</header>
