--- a/web/catalogue/books/template.html
+++ b/web/catalogue/books/template.html
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
     <!-- Provide more sutable information show in google search -->
-    <title>Cultural and Literary Animal Studies: catalogue</title>
-    <meta name="description" lang="en" content="The CLAS Digital searchable book archive catalogue"/>
+    <title>Book - Cultural and Literary Animal Studies</title>
+    <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all books."/>
     <link href="/catalogue/catalogue.css" rel="stylesheet" type="text/css">
 
     <script src="/Search.js"></script>
@@ -27,7 +27,7 @@
 <body>
 	{% include "../template_navbar.html" %}	
 	<header>
-	<h1>Index of all books</h1>
+	<h1>Index of all Books</h1>
 	<p>{{ length(books) }} books</p>
 	{% include "../search_template.html" %}
 	</header>
