--- a/web/catalogue/collections/template_collection.html
+++ b/web/catalogue/collections/template_collection.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/catalogue/collections" />
+    <link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/catalogue/collections/{{pillar.key}}" />
     <!--<link rel="stylesheet" href="style.css">-->
 
     <link href="/topnav.css" rel="stylesheet" type="text/css">
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
     <!-- Provide more sutable information show in google search -->
-    <title>Cultural and Literary Animal Studies: catalogue</title>
-    <meta name="description" lang="en" content="The CLAS Digital searchable book archive catalogue"/>
+    <title>Cultural and Literary Animal Studies: catalogue {{pillar.name}}</title>
+    <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all books in collection {{pillar.name}}"/>
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
@@ -28,7 +28,7 @@
 <body>
 	{% include "../template_navbar.html" %}	
 	<header>
-	<h1>Catalogue collection: {{pillar.name}}</h1>
+	<h1>Books in Collection: {{pillar.name}}</h1>
 	<p>{{ length(books) }} books in this collection</p>
 	{% include "../search_template.html" %}
 	</header>
