--- a/web/catalogue/books/template.html
+++ b/web/catalogue/books/template.html
@@ -9,7 +9,6 @@
     <!--<link rel="stylesheet" href="style.css">-->
 
     <link href="/topnav.css" rel="stylesheet" type="text/css">
-    <link href="/Search.css" rel="stylesheet">
 
     <!-- Link favicon, so google can show in search results -->
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
@@ -34,7 +33,7 @@
 	
 	<ol>
 	{% for pg in books %}
-	<li class="searchable_item"><a href="/books/{{ pg.key }}/">{{ pg.title }}</a><a class="metadata">{{ pg.bib }}</a></li>
+	<li class="searchable_item"><a href="/books/{{ pg.key }}/">{{ pg.title }}</a><span class="metadata">{{ pg.bib }}</span></li>
 	{% endfor %}
 	</ol>
 
