--- a/web/books/pages_template.html
+++ b/web/books/pages_template.html
@@ -23,10 +23,9 @@
 	<body>
 		<nav class='searchbox'>
 			<a class="about" href="../" rel="index up">About this book</a>
-			<center><input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;min-width: 10rem;margin-top: 0.5rem;text-align: center;' type='text' placeholder="search this book">
+			<center><input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;min-width: 10rem;margin-top: 0.5rem;text-align: center;' type='text' placeholder="search this book"/>
 				<i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'>
 				</i>
-				</input>
 				<img id='fullbut' onclick='tooglefullscreen(this);' class='fullscreen' title='Toogle fullscreen mode' style='float: right; margin:0.5rem' src="/static/GetBooks/fullscreen-24px.svg"/>
 				<img id='tooglebut' onclick="read_mode(this);" class='fullscreen' style='float: right;margin:0.5rem;' title="Toggle image reader and split reader mode" src="/static/GetBooks/chrome_reader_mode-24px.svg"/>
 				<div style='position: relative;width:90%;height: 1px;'>
