--- a/web/catalogue/search_template.html
+++ b/web/catalogue/search_template.html
@@ -1,4 +1,4 @@
-<input placeholder="Search for categories..." oninput="on_search(this);"></input>
+<input placeholder="Search here..." oninput="on_search(this);"></input>
 <span id="filteropts" style="display: none;">
 	<p style="color: grey;">Filtering yielded: <span id="infoProgress"></span></p>
 	<div class="progress" id="progressField">
