--- a/web/catalogue/books/template.html
+++ b/web/catalogue/books/template.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
     <!-- Provide more sutable information show in google search -->
-    <title>Book - Cultural and Literary Animal Studies</title>
+    <title>Books - Cultural and Literary Animal Studies</title>
     <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all books."/>
     <link href="/catalogue/catalogue.css" rel="stylesheet" type="text/css">
 
