Small changes to fix the links and improve the unnecessary oveflow

--- a/web/books/metadata_template.html
+++ b/web/books/metadata_template.html
@@ -18,7 +18,7 @@
             <nav id='booklcontentlink'>
                 <ul>
                     {% if hasContent %}
-                    <li><a href="/catalogue/books/{{ key }}/pages" rel="search">Pages in this book</a></li>
+                    <li><a href="/books/{{ key }}/pages" rel="search">Pages in this book</a></li>
                     {% endif %}
                     <li><a href="/catalogue/books/">Other books in catalogue</a></li>
 
