Fixes #216 and also and Cultural and literal animals studies to the totle of book metadatapages

--- a/web/books/metadata_template.html
+++ b/web/books/metadata_template.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="shortcut icon" href="/static/fav/hand-top-right-16+32+48.ico"/>
-        <title> {{ title }} </title>
+        <title> {{ title }} - Cultural and Literary Animal Studies </title>
 
 		<link rel="canonical" href="https://www.clas-digital.uni-frankfurt.de/books/{{ key }}"/>
 
