--- a/web/catalogue/collections/template_collection.html
+++ b/web/catalogue/collections/template_collection.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
     <!-- Provide more sutable information show in google search -->
-    <title>Cultural and Literary Animal Studies: catalogue {{pillar.name}}</title>
+    <title>{{pillar.name}} - Cultural and Literary Animal Studies</title>
     <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all books in collection {{pillar.name}}"/>
 
     <script src="/Search.js"></script>
