--- a/web/catalogue/template.html
+++ b/web/catalogue/template.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="/static/fav/hand-top-right-16+32+48.ico"/>
 
     <!-- Provide more sutable information show in google search -->
-    <title>Cultural and Literary Animal Studies: catalogue</title>
+    <title>Catalogue - Cultural and Literary Animal Studies</title>
     <meta name="description" lang="en" content="The CLAS Digital searchable book archive catalogue"/>
     <link href="catalogue.css" rel="stylesheet" type="text/css">
 
