--- a/web/catalogue/years/template_year.html
+++ b/web/catalogue/years/template_year.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
     <!-- Provide more sutable information show in google search -->
-    <title>Cultural and Literary Animal Studies: catalogue {{year}}</title>
+    <title>{{year}} - Cultural and Literary Animal Studies</title>
     <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all booky published in {{year}}"/>
 
     <script src="/Search.js"></script>
