--- a/web/search_template.html
+++ b/web/search_template.html
@@ -27,35 +27,7 @@
 
 
 <body>
-    <nav id='tpnav' class="topnav">
-        <a id='homelink' href='/information/'>Information</a>
-        <a id='searchlink' class='active' href='/search'>Search</a>
-	<div class='dropdown'>
-		<a id='statisticslink' class='dropdown-banner' href='/catalogue'>Catalogue  </a>
-		<div class='dropdown-content'>
-			<a href="/catalogue/books">Books</a>
-			<a href="/catalogue/authors">Authors</a>
-			<a href="/catalogue/collections">Collections</a>
-			<a href="/catalogue/years">Years</a>
-		</div>
-	</div>
-        <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
-        <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
-
-        <div class='topnav-right-in' id='loggedintopnav'>
-            <span id='LoggedInAs'>Logged in</span>
-            <button id='logoutBut' onclick='DoLogout()'>Logout</button>
-        </div>
-        <div class='topnav-right-out' id='loggedouttopnav'>
-            <form id ="LoginForm" action="/login" method="post">
-                <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
-                <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
-                <input type="submit" value="Log In"/>
-            </form>
-        </div>
-
-    </nav>
-
+   {% include "template_navbar.html" %} 
 
     <div id="searchboxid" class="button_box_top">
         <div class="logo"> <img src="static/clas-logotype-frankfurt-00618f-blue-712x450.png" width="15%" height="12%" title="Cultural And Literary Animal Studies" alt="CLAS Logo"> </div>
