--- a/web/private/admin/administration_template.html
+++ b/web/private/admin/administration_template.html
@@ -30,26 +30,7 @@ body {
 <link href="/topnav.css" rel="stylesheet" type="text/css">
   </head>
 <body>
-<!-- The navigation bar config -->
-<nav id='tpnav' class="topnav">
-    <a id='homelink' href='/information/'>Information</a>
-    <a id='searchlink' href='/search'>Search</a>
-    <!--<a id='statisticslink' href='/statistics/'>Statistics</a>-->
-    <a id='administrationlink' class='classifiedContent active' href='/private/admin/Administration.html' data-acc=4>Administration</a>
-    <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
-    <div class='topnav-right-in' id='loggedintopnav'>
-        <span id='LoggedInAs'>Logged in</span>
-        <button id='logoutBut' onclick='DoLogout()'>Logout</button>
-    </div>
-    <div class='topnav-right-out' id='loggedouttopnav'>
-        <form id ="LoginForm" action="/login" method="post">
-            <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
-            <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
-            <input type="submit" value="Log In"/>
-        </form>'
-    </div>
-</nav>
-
+   {% include "../../template_navbar.html" %} 
 
 <div id="StateBanner"></div>
 <ul id="CreateUser" class="list-group list-group-flush">
