--- a/web/private/write/uploadBook_template.html
+++ b/web/private/write/uploadBook_template.html
@@ -18,26 +18,7 @@
 </head>
 <body>
     <!-- The navigation bar config -->
-    <nav id='tpnav' class="topnav">
-	<a id='homelink' href='/information/'>Information</a>
-	<a id='searchlink' href='/search'>Search</a>
-	<!--<a id='statisticslink' href='/statistics/'>Statistics</a>-->
-	<a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
-	<a id='uploadbooklink' class='classifiedContent active' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
-
-	<div class='topnav-right-in' id='loggedintopnav'>
-	    <span id='LoggedInAs'>Logged in</span>
-	    <button id='logoutBut' onclick='DoLogout()'>Logout</button>
-	</div>
-	<div class='topnav-right-out' id='loggedouttopnav'>
-	    <form id ="LoginForm" action="/login" method="post">
-		<input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
-		<input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
-		<input type="submit" value="Log In"/>
-	    </form>
-	</div>
-
-    </nav>
+    {% include "../../template_navbar.html" %} 
 
     <div class='biggerPageClass'>
 	<h3 id='status_banner'></h3>
